// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printCompositionRefusal > renders a compatible transition overwritten by a later stage 1`] = `
"Pipeline cannot start ❌
  Pipeline:  overwritten-output
  Source:    /config/pipelines/overwritten-output.json
  Where:     pipeline stage 4 of 4 · implement-plan
  Problem:   1 requirement for "implement-plan" is not satisfied.

Plan projection (assuming earlier selected stages succeed)
  Thread before run:
    no plan.md and no plan-tasks/ folder
  After stage 2 · plan-strict:
    a non-empty plan.md and a plan-tasks/ folder holding at least one non-empty .md task file
  After stage 3 · plan-brief:
    a non-empty plan.md and no plan-tasks/ folder
  Required by stage 4 · implement-plan:
    a non-empty plan.md and a plan-tasks/ folder holding at least one non-empty .md task file

  Why:
    - Stage 3 "plan-brief" would replace the compatible plan projected after stage 2 "plan-strict" with one that does not satisfy the prerequisite for stage 4 "implement-plan".
  Result:    No stages were run.
"
`;

exports[`printCompositionRefusal > renders a later prerequisite unchanged by earlier stages 1`] = `
"Pipeline cannot start ❌
  Pipeline:  missing-later
  Source:    /config/pipelines/missing-later.json
  Where:     pipeline stage 2 of 2 · implement
  Problem:   1 requirement for "implement" is not satisfied.

Plan projection (assuming earlier selected stages succeed)
  Thread before run:
    no plan.md and no plan-tasks/ folder
  Earlier stage changes:
    none — stage 1 "spec" does not change the plan
  Required by stage 2 · implement:
    a non-empty plan.md and no plan-tasks/ folder

  Why:
    - The thread's plan does not satisfy the prerequisite for stage 2 "implement", and no earlier selected stage changes it.
  Result:    No stages were run.
"
`;

exports[`printCompositionRefusal > renders a malformed artifact already present in the thread 1`] = `
"Pipeline cannot start ❌
  Pipeline:  malformed-plan
  Source:    /config/pipelines/malformed-plan.json
  Where:     pipeline stage 1 of 1 · implement-plan
  Problem:   1 requirement for "implement-plan" is not satisfied.

Plan projection (assuming earlier selected stages succeed)
  Thread before run:
    a plan.md and plan-tasks/ folder combination that does not form a usable plan
  Earlier stage changes:
    none — this is the first selected stage
  Required by stage 1 · implement-plan:
    a non-empty plan.md and a plan-tasks/ folder holding at least one non-empty .md task file

  Why:
    - The thread's plan does not satisfy the prerequisite for stage 1 "implement-plan", and this is the first selected stage.
  Result:    No stages were run.
"
`;

exports[`printCompositionRefusal > renders a missing prerequisite on the first selected --from stage 1`] = `
"Pipeline cannot start ❌
  Pipeline:  missing-first
  Source:    /config/pipelines/missing-first.json
  Where:     pipeline stage 2 of 2 · plan-strict
  Selection: selected stage 1 of 1 from --from plan-strict
  Problem:   1 requirement for "plan-strict" is not satisfied.

Spec projection (assuming earlier selected stages succeed)
  Thread before run:
    no spec.md
  Earlier stage changes:
    none — this is the first selected stage
  Required by stage 2 · plan-strict:
    a non-empty spec.md

  Why:
    - The thread's spec does not satisfy the prerequisite for stage 2 "plan-strict", and this is the first selected stage.
  Result:    No stages were run.
"
`;

exports[`printCompositionRefusal > renders an invalid --from entry point 1`] = `
"Pipeline cannot start ❌
  Pipeline:  invalid-entry
  Source:    /config/pipelines/invalid-entry.json
  Where:     --from implement
  Problem:   The requested entry point is not selected by this pipeline.

  Pipeline stages:
    1. spec
    2. plan-strict

  Why:
    - --from selects a suffix beginning at a stage in the pipeline, but "implement" does not occur in this one.
  Result:    No stages were run.
"
`;

exports[`printCompositionRefusal > renders one incompatible earlier transition 1`] = `
"Pipeline cannot start ❌
  Pipeline:  incompatible-output
  Source:    /config/pipelines/incompatible-output.json
  Where:     pipeline stage 2 of 2 · implement-plan
  Problem:   1 requirement for "implement-plan" is not satisfied.

Plan projection (assuming earlier selected stages succeed)
  Thread before run:
    no plan.md and no plan-tasks/ folder
  After stage 1 · plan-brief:
    a non-empty plan.md and no plan-tasks/ folder
  Required by stage 2 · implement-plan:
    a non-empty plan.md and a plan-tasks/ folder holding at least one non-empty .md task file

  Why:
    - Stage 1 "plan-brief" is the last earlier stage to change the plan; its projected output does not satisfy the prerequisite for stage 2 "implement-plan".
  Result:    No stages were run.
"
`;

exports[`printCompositionRefusal > renders several failed dependencies with independent origins 1`] = `
"Pipeline cannot start ❌
  Pipeline:  multiple-prerequisites
  Source:    /config/pipelines/multiple-prerequisites.json
  Where:     pipeline stage 2 of 2 · reconcile-plan
  Problem:   2 requirements for "reconcile-plan" are not satisfied.

Spec projection (assuming earlier selected stages succeed)
  Thread before run:
    no spec.md
  Earlier stage changes:
    none — stage 1 "plan-brief" does not change the spec
  Required by stage 2 · reconcile-plan:
    a non-empty spec.md

Plan projection (assuming earlier selected stages succeed)
  Thread before run:
    no plan.md and no plan-tasks/ folder
  After stage 1 · plan-brief:
    a non-empty plan.md and no plan-tasks/ folder
  Required by stage 2 · reconcile-plan:
    a non-empty plan.md and a plan-tasks/ folder holding at least one non-empty .md task file

  Why:
    - The thread's spec does not satisfy the prerequisite for stage 2 "reconcile-plan", and no earlier selected stage changes it.
    - Stage 1 "plan-brief" is the last earlier stage to change the plan; its projected output does not satisfy the prerequisite for stage 2 "reconcile-plan".
  Result:    No stages were run.
"
`;

exports[`printHarnessRuntimeRefusal > explains an immutable runtime, refuses the switch, and gives the real-mode correction 1`] = `
"Run cannot resume ❌
  Run ID:  260101T000000000Z-run
  Check:   Harness runtime identity
  Problem: This run was started against a real harness, and ANTMAY_SIMULATED_HARNESS=1 selects the simulated harness.

  Why:
    - A run's harness runtime is fixed when the run is allocated and cannot change.
    - Continuing through another provider would execute the rest of the pipeline on a harness this run never used.

  Fix:
    Resume with simulated mode disabled:
      unset ANTMAY_SIMULATED_HARNESS
      antmay afk resume 260101T000000000Z-run
  Result:  Checkpoint unchanged. No harness was probed, no lock was acquired, and no stage was run.
"
`;

exports[`printTemporaryWorkspaceRefusal > renders a structured new-run refusal with separate problems and fixes 1`] = `
"Pipeline cannot start ❌
  Pipeline: standard
  Thread:   docs/threads/260101000000Z-example
  Check:    Temporary workspace Git safety
  Problem:  Antmay's temporary workspaces are not Git-safe.

Missing ignore coverage
  Directories:
    - .pending-decisions/
    - .pending-reviews/

  Fix:
    Add these lines to /repo/.gitignore:
      docs/threads/**/.pending-decisions/
      docs/threads/**/.pending-reviews/

Tracked temporary content
  Files:
    - .implementation-runs/run/task/outcome.md

  Fix:
    Run from /repo:
      git rm -r --cached -- docs/threads/260101000000Z-example/.implementation-runs
    Then commit the removal.

  Why:
    - Antmay writes temporary work-in-progress files into these directories.
    - Git must ignore them and track nothing inside them.
    - Files written during a run can otherwise make a later stage fail its Git boundary.
  Result:   No run was created and no stages were run.
"
`;

exports[`printTemporaryWorkspaceRefusal > renders the same diagnosis as a resume refusal with durable-state context 1`] = `
"Run cannot resume ❌
  Run ID:   260101T000000000Z-run
  Pipeline: standard
  Thread:   docs/threads/260101000000Z-example
  Check:    Temporary workspace Git safety
  Problem:  Antmay's temporary workspaces are not Git-safe.

Missing ignore coverage
  Directories:
    - .pending-decisions/
    - .pending-reviews/

  Fix:
    Add these lines to /repo/.gitignore:
      docs/threads/**/.pending-decisions/
      docs/threads/**/.pending-reviews/

Tracked temporary content
  Files:
    - .implementation-runs/run/task/outcome.md

  Fix:
    Run from /repo:
      git rm -r --cached -- docs/threads/260101000000Z-example/.implementation-runs
    Then commit the removal.

  Why:
    - Antmay writes temporary work-in-progress files into these directories.
    - Git must ignore them and track nothing inside them.
    - Files written during a run can otherwise make a later stage fail its Git boundary.
  Result:   Checkpoint unchanged. No lock was acquired and no stage was run.
  Resume:   antmay afk resume 260101T000000000Z-run
"
`;
